--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,3 +35,23 @@ jobs:
         with:
           name: Avalonia-Windows-Build
           path: output/
+          
+  release:
+    needs: build
+    runs-on: windows-latest
+    steps:
+      - name: Download built artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: Avalonia-Windows-Build
+          path: build-output
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v1.0.${{ github.run_number }}
+          name: "Release v1.0.${{ github.run_number }}"
+          files: build-output/**/*.exe
+          draft: false
+          prerelease: false
+
