--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,15 +1,9 @@
-name: Avalonia Windows Build & Release
+name: Build Avalonia App
 
 on:
   push:
     branches:
-      - master
-  pull_request:
-    branches:
-      - master
-
-permissions:
-  contents: write  # Engedélyezi a release létrehozását
+      - master  # Vagy ha a "main" branch-et használod, írd át
 
 jobs:
   build:
@@ -17,46 +11,28 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '8.0.x'  # Állítsd be a megfelelő .NET verziót
+          dotnet-version: '8.0.x'  # Vagy használd a projektednek megfelelő verziót
 
-      - name: Restore NuGet packages
+      - name: Restore dependencies
         run: dotnet restore
 
-      - name: Build Avalonia project
-        run: dotnet build --configuration Release --no-restore
-
-      - name: Publish Avalonia App (Create Executable)
+      - name: Build project
         run: dotnet publish -c Release -r win-x64 --self-contained true -o output
 
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: Avalonia-Windows-Build
+          name: AvaloniaApp
           path: output/
-
-  release:
-    needs: build
-    runs-on: windows-latest
-
-    steps:
-      - name: Download built artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: Avalonia-Windows-Build
-          path: build-output
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: v1.0.${{ github.run_number }}
-          name: "Release v1.0.${{ github.run_number }}"
-          files: build-output/**/*.exe
-          draft: false
-          prerelease: false
+          files: output/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
