--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,15 @@
-name: Build Avalonia App
+name: Avalonia Windows Build & Release
 
 on:
   push:
     branches:
-      - master  # Vagy ha a "main" branch-et használod, írd át
+      - master
+  pull_request:
+    branches:
+      - master
+
+permissions:
+  contents: write  # Engedélyezi a release létrehozását
 
 jobs:
   build:
@@ -11,28 +17,46 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '8.0.x'  # Vagy használd a projektednek megfelelő verziót
+          dotnet-version: '8.0.x'  # Állítsd be a megfelelő .NET verziót
 
-      - name: Restore dependencies
+      - name: Restore NuGet packages
         run: dotnet restore
 
-      - name: Build project
+      - name: Build Avalonia project
+        run: dotnet build --configuration Release --no-restore
+
+      - name: Publish Avalonia App (Create Executable)
         run: dotnet publish -c Release -r win-x64 --self-contained true -o output
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: AvaloniaApp
+          name: Avalonia-Windows-Build
           path: output/
+
+  release:
+    needs: build
+    runs-on: windows-latest
+
+    steps:
+      - name: Download built artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: Avalonia-Windows-Build
+          path: build-output
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
-          files: output/*
+          tag_name: v1.0.${{ github.run_number }}
+          name: "Release v1.0.${{ github.run_number }}"
+          files: build-output/**/*.exe
+          draft: false
+          prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
