--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         run: dotnet build --configuration Release --no-restore
 
       - name: Publish Avalonia App (Create Executable)
-        run: dotnet publish -c Release -r win-x64 --no-self-contained true -o output
+        run: dotnet publish -c Release -r win-x64 --self-contained true -o output
 
       - name: Create ZIP archive
         run: |
